--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     </head>
     <body>
         <div id="game">
-            <div id="character"></div>
-            <div id="block"></div>
+            <div id="character">
+                <image src="human.png"></image>
+            </div>
+            <div id="block">
+                <image src="rock.png"></image>
+            </div>
         </div>
     </body>
     <script src="script.js"></script>
