adjust animation and images

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <body>
         <div id="game">
             <div id="character">
-                <image src="human.png"></image>
+                <image src="human.png" width="50" height="100"></image>
             </div>
             <div id="block">
-                <image src="rock.png"></image>
+                <image src="rock.png" width="50" height="50"></image>
             </div>
         </div>
     </body>
